# api

./: Dockerfile  README.md  entrypoint.sh  packages.txt  requirements.txt  wsgi.py
modules/watsxn-base/: pyproject.toml  requirements.txt  tox.ini
modules/watsxn-base/tests/: conftest.py  test_models.py
modules/watsxn-base/watsxn_base/: __init__.py  config.py  ext.py  models.py  views.py
modules/watsxn-base/watsxn_base/templates/: index.html  layout.html  login.html  signup.html
modules/watsxn-base/watsxn_base/templates/components/: header.html  navigation.html
modules/watsxn-db/: pyproject.toml  requirements.txt  tox.ini
modules/watsxn-db/tests/: conftest.py  test_watsxn_db.py
modules/watsxn-db/watsxn_db/: __init__.py  cli.py  config.py  ext.py  mixins.py  shared.py
modules/watsxn-trainup/: pyproject.toml  requirements.txt  tox.ini
modules/watsxn-trainup/tests/: conftest.py  test_views.py  test_watsxn_trainup.py
modules/watsxn-trainup/watsxn_trainup/: __init__.py  ext.py  views.py
