[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watsxn-db"
version = "0.0.1"
requires-python = ">=3.12"
license = {text = "MIT License"}

[tool.setuptools.packages.find]
where = ["."]
include = ["watsxn_db"]
exclude = ["logs"]

[pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

